<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pattern_lock_main_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/theme_2"
    tools:context=".LockActivities.PatternLockActivity">

    <RelativeLayout
        android:id="@+id/top_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/top_simpleLine_pattern_lock"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#373535"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_banner" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/bottom_simple_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_simpleLine_pattern_lock"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/pattern_lock_app_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sdp"
            android:visibility="gone"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/pattern_lock_app_icon"
            android:layout_width="@dimen/_75sdp"
            android:layout_height="@dimen/_75sdp"
            android:layout_marginTop="@dimen/_30sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pattern_lock_app_title"
            app:srcCompat="@drawable/app_icon" />

        <TextView
            android:id="@+id/draw_pattern_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/draw_your_pattern"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pattern_lock_app_icon" />

        <com.mattprecious.swirl.SwirlView
            android:id="@+id/fingerPrint_swirl_view"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:src="@drawable/ic_fingerprint"
            android:tint="@color/white"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/draw_pattern_text"
            app:swirl_state="on" />


        <com.andrognito.patternlockview.PatternLockView
            android:id="@+id/patternLockView"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="@dimen/_250sdp"
            android:layout_gravity="center_horizontal"
            app:correctStateColor="@color/white"
            app:dotNormalSize="@dimen/_12sdp"
            app:layout_constraintBottom_toTopOf="@+id/btn_forgot_pattern"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fingerPrint_swirl_view"
            app:normalStateColor="@color/white"
            app:wrongStateColor="@color/black" />

        <TextView
            android:id="@+id/btn_forgot_pattern"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:text="@string/forgot_pattern"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/bottom_simple_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#373535"
        app:layout_constraintBottom_toTopOf="@id/bottom_banner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RelativeLayout
        android:id="@+id/bottom_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>